new-till-pan-09-05-24

--- a/index.html
+++ b/index.html
@@ -290,6 +290,184 @@
                 </td>
             </tr>
 
+
+            <tr>
+                <td>
+                    <input type="checkbox" id="" name="">
+                </td>
+
+                <td>
+                    <span class="main">*</span><b>5.Date of birth/incorporation/agreement/Partnership or trust deed/formation of body of individuals/association of Persons</b>
+                </td>
+
+                <td>
+                    <input type="date" name="" id="">
+                </td>
+            </tr>
+
+            <tr>
+                <td></td>
+
+                <td>
+                    <span class="main">*</span><b>6.Gender</b>
+                </td>
+
+                <td>
+                    <label for="male">Male</label>
+                    <input type="radio" name="" id="">
+
+                    <label for="Female">Female</label>
+                    <input type="radio" name="" id="">
+
+
+                    <label for="TransGender">TransGender</label>
+                    <input type="radio" name="" id="">
+                </td>
+            </tr>
+
+
+            <tr>
+                <td>
+                    <input type="checkbox" id="" name="">
+                </td>
+
+                <td colspan="2">
+                    <b>7.Phote Mismatch</b>
+                </td>
+            </tr>
+
+
+
+            <tr>
+                <td>
+                    <input type="checkbox" id="" name="">
+                </td>
+
+                <td colspan="2">
+                    <b>8.Signature Mismatch</b>
+                </td>
+            </tr>
+
+
+            <tr>
+                <td> <input type="checkbox" id="" name=""></td>
+
+                <td>
+                    <span class="main">*</span><b>9.Address for Communication</b>
+                </td>
+
+                <td>
+                    <label for="residential">Residential</label>
+                    <input type="radio" name="" id="">
+
+                    <label for="office">Office</label>
+                    <input type="radio" name="" id="">
+                </td>
+            </tr>
+
+
+            <tr>
+                <td></td>
+
+                <td>
+                    <b>office Name</b> <i>(to be filled only in case of office address)</i>
+                </td>
+
+                <td>
+                    <input type="text" name="" id="">
+                </td>
+            </tr>
+
+            <tr>
+                <td></td>
+
+                <td>
+                    <b>Flate/Door/Block No.</b>
+                </td>
+
+                <td>
+                    <input type="text" name="" id="">
+                </td>
+            </tr>
+
+            <tr>
+                <td></td>
+
+                <td>
+                    <b>Name of Premises/Building/Village</b>
+                </td>
+
+                <td>
+                    <input type="text" name="" id="">
+                </td>
+            </tr>
+
+
+            <tr>
+                <td></td>
+
+                <td>
+                    <b>Road/Street/lane/Post office</b>
+                </td>
+
+                <td>
+                    <input type="text" name="" id="">
+                </td>
+            </tr>
+
+
+            <tr>
+                <td></td>
+
+                <td>
+                    <b>Area/Locality/Taluka/sub-Division</b>
+                </td>
+
+                <td>
+                    <input type="text" name="" id="">
+                </td>
+            </tr>
+
+            <tr>
+                <td></td>
+
+                <td>
+                    <b>Town/City/Distric</b>
+
+                <td>
+                    <input type="text" name="" id="">
+            </tr>
+
+            <tr>
+                <td></td>
+
+                <td>
+                    <b>State/Union Territory</b>
+                </td>
+
+                <td>
+                    <input type="text" name="" id="" placeholder="--Please select">
+                    <select id="cars" name="cars">
+                        <option value="volvo"></option>
+                        <option value="saab"></option>
+                        <option value="fiat"></option>
+                        <option value="audi"></option>
+                      </select>                
+                </td>
+            </tr>
+
+            <tr>
+                <td></td>
+
+                <td>
+                    <b>PIN</b> <i>(Indicating PIN is Mandatory)</i>
+                </td>
+
+                <td>
+                    <input type="text" name="" id="">
+                </td>
+            </tr>
+
        
     </tbody>
 
